# PickupProcessor

./: .gitignore  Cargo.toml  Cross.toml  README.md  api_contract.json  build.sh  start.sh
.github/workflows/: arm-cargo-build.yml  rust.yml
src/: audio_bus.rs  audio_input.rs  audio_output.rs  auxiliary_input.rs  auxiliary_output.rs  error.rs  external_connection.rs  logger.rs  main.rs  routing_director.rs  stream.rs  vcsgp_connection.rs
src/audio_effects/: audio_effect.rs  delay_effect.rs  effect_helper.rs  effect_input_observer.rs  gain_effect.rs  hard_clipper_effect.rs  low_pass_filter_effect.rs  lowpass_filter_effect.rs  mod.rs  reverb_effect.rs
src/control_input/: control_input.rs  control_input_observer.rs  input_helper.rs  laser_input.rs  mod.rs  observable_control_input.rs
src/portal/: external_connection.rs  mod.rs  vcsgp_connection.rs
