[package]
name = "pickup-processor"
version = "0.2.1"
edition = "2024"

[dependencies]
fundsp = "0.23.0"
jack = "0.13.5"
rtrb = "0.3.4"
rppal = { version = "0.22.1", features = ["hal"] }
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
colored = "3.1.1"
vl53l0x-simple = "0.2.0"
